tests/unit-fail-compilation/paramStorage.c.ref
paramStorage.c:1:1: error: Function parameter appears with storage class other than register.
  Constraint violation (CV-TDG5).
   see C11 section 6.7.6.3:2 http://rvdoc.org/C11/6.7.6.3
   see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
   see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors paramStorage.c to see commands run.
